Update navbars and routing

--- a/Gui/src/app/navbar-footer/navbar-footer.component.scss
+++ b/Gui/src/app/navbar-footer/navbar-footer.component.scss
@@ -3,11 +3,10 @@
     margin-left: -20px;
 }
 
-.icon-active {
-    font-size: 40px;
-    color: white;
-    margin-left: -20px;
-}
 .navbar {
     background-color: #f21622 !important;
 }
+
+.active .mat-icon{
+    color: #FFFFFD;
+ }
