--- a/Gui/src/app/plan/plan.component.html
+++ b/Gui/src/app/plan/plan.component.html
@@ -1,215 +1,56 @@
 <div class="w-90">
-    <mat-tab-group mat-stretch-tabs>
+  <mat-tab-group mat-stretch-tabs>
 
-        <mat-tab>
-          <ng-template mat-tab-label>
-            Meals
-          </ng-template>
-          
-          <br>
-          
-          <mat-card>
-            <div class="container">
-              <div class="row">
-                <div class="col-3 ">
-                  <img style="margin-top: 4px;" mat-card-image src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRtbLaBtYyVOtA6vdfCD9zs0O9yh4aK-fmRtMVdeaCtYjJARrYUwH11YK9Khjg&usqp=CAc" alt="Photo of a Shiba Inu">
-                </div>
-                <div class="col-9">
-                  <mat-card-title>
-                    BBQ Ribs & Baked Potato
-                  </mat-card-title>
-                  <mat-card-content>
-                    Spare Ribs (Pork), Baked Potato, Mac & Cheese.
-                  </mat-card-content>
-                  <mat-card-subtitle style="margin-top: -15px;">
-                    1000 Calories.
-                  </mat-card-subtitle>
-                </div>
-              </div>
+    <!-- Meals -->
+    <mat-tab>
+      <ng-template mat-tab-label>
+        Meals
+      </ng-template>
+      <mat-card *ngFor="let meal of meals">
+        <div class="container">
+          <div class="row">
+            <div class="col-3">
+              <img style="margin-top: 4px;" mat-card-image src="{{meal.imageUrl}}" alt="{{meal.imageCaption">
             </div>
-          </mat-card>
-
-          <mat-card>
-            <div class="container">
-              <div class="row">
-                <div class="col-3 ">
-                  <img style="margin-top: 4px;" mat-card-image src="https://www.thewholesomedish.com/wp-content/uploads/2019/04/The-Best-Classic-Hamburgers-550.jpg" alt="Photo of a Shiba Inu">
-                </div>
-                <div class="col-9">
-                  <mat-card-title>
-                    Burger & Fries
-                  </mat-card-title>
-                  <mat-card-content>
-                    Ground beef, potato bun, lettuce, tomato, onion, ketchup, mustard. Fries on the side.
-                  </mat-card-content>
-                  <mat-card-subtitle style="margin-top: -15px;">
-                    1000 Calories.
-                  </mat-card-subtitle>
-                </div>
-              </div>
+            <div class="col-9">
+              <mat-card-title>
+                {{meal.title | slice:0:23}}<span *ngIf="meal.title.length > 23">...</span>
+              </mat-card-title>
+              <mat-card-content>
+                {{meal.content | slice:0:99}}<span *ngIf="meal.content.length > 100">...</span>
+              </mat-card-content>
+              <mat-card-subtitle style="margin-top: -15px;">
+                {{meal.details}}
+              </mat-card-subtitle>
             </div>
-          </mat-card>
-          
-          <mat-card>
-            <div class="container">
-              <div class="row">
-                <div class="col-3 ">
-                  <img style="margin-top: 4px;" mat-card-image src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRtbLaBtYyVOtA6vdfCD9zs0O9yh4aK-fmRtMVdeaCtYjJARrYUwH11YK9Khjg&usqp=CAc" alt="Photo of a Shiba Inu">
-                </div>
-                <div class="col-9">
-                  <mat-card-title>
-                    BBQ Ribs & Baked Potato
-                  </mat-card-title>
-                  <mat-card-content>
-                    Spare Ribs (Pork), Baked Potato, Mac & Cheese.
-                  </mat-card-content>
-                  <mat-card-subtitle style="margin-top: -15px;">
-                    1000 Calories.
-                  </mat-card-subtitle>
-                </div>
-              </div>
-            </div>
-          </mat-card>
+          </div>
+        </div>
+      </mat-card>
+    </mat-tab>
 
-          <mat-card>
-            <div class="container">
-              <div class="row">
-                <div class="col-3 ">
-                  <img style="margin-top: 4px;" mat-card-image src="https://www.thewholesomedish.com/wp-content/uploads/2019/04/The-Best-Classic-Hamburgers-550.jpg" alt="Photo of a Shiba Inu">
-                </div>
-                <div class="col-9">
-                  <mat-card-title>
-                    Burger & Fries
-                  </mat-card-title>
-                  <mat-card-content>
-                    Ground beef, potato bun, lettuce, tomato, onion, ketchup, mustard. Fries on the side.
-                  </mat-card-content>
-                  <mat-card-subtitle style="margin-top: -15px;">
-                    1000 Calories.
-                  </mat-card-subtitle>
-                </div>
-              </div>
-            </div>
-          </mat-card>
+    <!-- Foods -->
+    <mat-tab>
+      <ng-template mat-tab-label>
+        Foods
+      </ng-template>
+      Information about your foods.
+    </mat-tab>
 
-          <mat-card>
-            <div class="container">
-              <div class="row">
-                <div class="col-3 ">
-                  <img style="margin-top: 4px;" mat-card-image src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRtbLaBtYyVOtA6vdfCD9zs0O9yh4aK-fmRtMVdeaCtYjJARrYUwH11YK9Khjg&usqp=CAc" alt="Photo of a Shiba Inu">
-                </div>
-                <div class="col-9">
-                  <mat-card-title>
-                    BBQ Ribs & Baked Potato
-                  </mat-card-title>
-                  <mat-card-content>
-                    Spare Ribs (Pork), Baked Potato, Mac & Cheese.
-                  </mat-card-content>
-                  <mat-card-subtitle style="margin-top: -15px;">
-                    1000 Calories.
-                  </mat-card-subtitle>
-                </div>
-              </div>
-            </div>
-          </mat-card>
+    <!-- Recipes -->
+    <mat-tab>
+      <ng-template mat-tab-label>
+        Recipes
+      </ng-template>
+      Information about your recipes.
+    </mat-tab>
 
-          <mat-card>
-            <div class="container">
-              <div class="row">
-                <div class="col-3 ">
-                  <img style="margin-top: 4px;" mat-card-image src="https://www.thewholesomedish.com/wp-content/uploads/2019/04/The-Best-Classic-Hamburgers-550.jpg" alt="Photo of a Shiba Inu">
-                </div>
-                <div class="col-9">
-                  <mat-card-title>
-                    Burger & Fries
-                  </mat-card-title>
-                  <mat-card-content>
-                    Ground beef, potato bun, lettuce, tomato, onion, ketchup, mustard. Fries on the side.
-                  </mat-card-content>
-                  <mat-card-subtitle style="margin-top: -15px;">
-                    1000 Calories.
-                  </mat-card-subtitle>
-                </div>
-              </div>
-            </div>
-          </mat-card>
+    <!-- Ingredients -->
+    <mat-tab>
+      <ng-template mat-tab-label>
+        Ingredients
+      </ng-template>
+      Information about your ingredients.
+    </mat-tab>
 
-          <mat-card>
-            <div class="container">
-              <div class="row">
-                <div class="col-3 ">
-                  <img style="margin-top: 4px;" mat-card-image src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRtbLaBtYyVOtA6vdfCD9zs0O9yh4aK-fmRtMVdeaCtYjJARrYUwH11YK9Khjg&usqp=CAc" alt="Photo of a Shiba Inu">
-                </div>
-                <div class="col-9">
-                  <mat-card-title>
-                    BBQ Ribs & Baked Potato
-                  </mat-card-title>
-                  <mat-card-content>
-                    Spare Ribs (Pork), Baked Potato, Mac & Cheese.
-                  </mat-card-content>
-                  <mat-card-subtitle style="margin-top: -15px;">
-                    1000 Calories.
-                  </mat-card-subtitle>
-                </div>
-              </div>
-            </div>
-          </mat-card>
-
-          <mat-card>
-            <div class="container">
-              <div class="row">
-                <div class="col-3 ">
-                  <img style="margin-top: 4px;" mat-card-image src="https://www.thewholesomedish.com/wp-content/uploads/2019/04/The-Best-Classic-Hamburgers-550.jpg" alt="Photo of a Shiba Inu">
-                </div>
-                <div class="col-9">
-                  <mat-card-title>
-                    Burger & Fries
-                  </mat-card-title>
-                  <mat-card-content>
-                    Ground beef, potato bun, lettuce, tomato, onion, ketchup, mustard. Fries on the side.
-                  </mat-card-content>
-                  <mat-card-subtitle style="margin-top: -15px;">
-                    1000 Calories.
-                  </mat-card-subtitle>
-                </div>
-              </div>
-            </div>
-          </mat-card>
-
-        </mat-tab>
-      
-        <mat-tab>
-          <ng-template mat-tab-label>
-            Foods
-          </ng-template>
-          
-          Information about your foods.
-          
-
-        </mat-tab>
-      
-        <mat-tab>
-          <ng-template mat-tab-label>
-            Recipes
-          </ng-template>
-      
-          
-          Information about your recipes.
-          
-
-        </mat-tab>
-
-        <mat-tab>
-            <ng-template mat-tab-label>
-            Ingredients
-            </ng-template>
-        
-            
-            Information about your ingredients.
-            
-  
-          </mat-tab>
-
-      </mat-tab-group>
-
+  </mat-tab-group>
 </div>
