--- a/Gui/src/app/app.component.html
+++ b/Gui/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
 <br><br><br><br>
-<app-plan></app-plan>
+<router-outlet></router-outlet>
 <br><br><br><br>
 <app-navbar-footer></app-navbar-footer>
