--- a/Gui/src/app/navbar-footer/navbar-footer.component.html
+++ b/Gui/src/app/navbar-footer/navbar-footer.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar fixed-bottom navbar-light bg-danger">
     <ul class="navbar-nav ml-auto flex-row nav-fill w-100">
         <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" routerLinkActive="active" routerLink="/what-to-eat">
                 <mat-icon class="icon">restaurant</mat-icon>
             </a>
         </li>
@@ -12,7 +12,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" routerLinkActive="active" routerLink="/profile">
                 <mat-icon class="icon" matBadge="8" matBadgePosition="before" matBadgeColor="primary">person</mat-icon>
             </a>
         </li>
