Profile and user features

--- a/Gui/src/app/profile/profile.component.html
+++ b/Gui/src/app/profile/profile.component.html
@@ -1,7 +1,7 @@
 <div class="main container">
     <div class="row">
         <div class="text-center col-8 mx-auto">
-            <img src="{{user.userImageUrl}}" class="rounded-circle img-fluid border border-dark" alt="{{user.userName}}'s User Image">
+            <img src="../../assets/no_image.jpg" class="rounded-circle img-fluid border border-dark" alt="{{user.userName}}'s User Image">
         </div>
     </div>
     <br>
