Working through Ingredient

--- a/Gui/src/app/add-content/add-content.component.html
+++ b/Gui/src/app/add-content/add-content.component.html
@@ -1,20 +1,20 @@
 <mat-nav-list>
-    <a href="https://keep.google.com/" mat-list-item (click)="openLink($event)">
+    <a mat-list-item (click)="openLink($event)">
       <span mat-line>New Meal</span>
       <span mat-line>Build a meal from your foods</span>
     </a>
   
-    <a href="https://docs.google.com/" mat-list-item (click)="openLink($event)">
+    <a mat-list-item (click)="openLink($event)">
       <span mat-line>New Food</span>
       <span mat-line>Add a new food to your saved foods</span>
     </a>
   
-    <a href="https://plus.google.com/" mat-list-item (click)="openLink($event)">
+    <a mat-list-item (click)="openLink($event)">
       <span mat-line>New Recipe</span>
       <span mat-line>Add a new recipe to your book</span>
     </a>
   
-    <a href="https://hangouts.google.com/" mat-list-item (click)="openLink($event)">
+    <a mat-list-item (click)="openLink($event)">
       <span mat-line>New Ingredient</span>
       <span mat-line>Add new ingredients to your pantry</span>
     </a>
@@ -24,4 +24,4 @@
         <span mat-line>&nbsp;</span>
         <span mat-line>&nbsp;</span>
     </a>
-  </mat-nav-list>
+</mat-nav-list>
