--- a/Gui/src/app/feed/feed.component.html
+++ b/Gui/src/app/feed/feed.component.html
@@ -1,1 +1,5 @@
-<p>feed works!</p>
+<br>
+<p class="text-center">
+    This feature is not yet enabled.<br>
+    <strong>User Feeds</strong> will go live at a later date.
+</p>
