--- a/Gui/src/app/what-to-eat/what-to-eat.component.html
+++ b/Gui/src/app/what-to-eat/what-to-eat.component.html
@@ -1,1 +1,5 @@
-<p>what-to-eat works!</p>
+<br>
+<p class="text-center">
+    This feature is not yet enabled.<br>
+    <strong>Food Roulette</strong> will go live at a later date.
+</p>
