--- a/Gui/src/app/whats-hot/whats-hot.component.html
+++ b/Gui/src/app/whats-hot/whats-hot.component.html
@@ -1,1 +1,5 @@
-<p>whats-hot works!</p>
+<br>
+<p class="text-center">
+    This feature is not yet enabled.<br>
+    <strong>What's Hot</strong> will go live at a later date.
+</p>
