--- a/Gui/src/app/navbar-footer/navbar-footer.component.html
+++ b/Gui/src/app/navbar-footer/navbar-footer.component.html
@@ -13,7 +13,8 @@
         </li>
         <li class="nav-item">
             <a class="nav-link" routerLinkActive="active" routerLink="/profile">
-                <mat-icon class="icon" matBadge="8" matBadgePosition="before" matBadgeColor="primary">person</mat-icon>
+                <mat-icon class="icon">person</mat-icon>
+                <!-- <mat-icon class="icon" matBadge="8" matBadgePosition="before" matBadgeColor="primary">person</mat-icon> -->
             </a>
         </li>
     </ul>
