--- a/Gui/src/app/navbar/navbar.component.html
+++ b/Gui/src/app/navbar/navbar.component.html
@@ -3,7 +3,8 @@
 
         <li class="nav-item">
             <a class="nav-link" routerLinkActive="active" routerLink="/feed">
-                <mat-icon class="icon" matBadge="8" matBadgePosition="before" matBadgeColor="primary">article</mat-icon>
+                <!-- <mat-icon class="icon" matBadge="8" matBadgePosition="before" matBadgeColor="primary">article</mat-icon> -->
+                <mat-icon class="icon">article</mat-icon>
             </a>
         </li>
         <li class="nav-item">
