--- a/Gui/src/app/plan/plan.component.html
+++ b/Gui/src/app/plan/plan.component.html
@@ -52,7 +52,46 @@
       <ng-template mat-tab-label>
         Ingredients
       </ng-template>
-      Information about your ingredients.
+      <div class="container">
+        <mat-card style="margin-top: 5px; margin-bottom: 5px;">
+            <mat-form-field class="col-12">
+              <mat-label>Filter</mat-label>
+              <input matInput (keyup)="applyFilter($event)" placeholder="Ex. pepper" #input>
+            </mat-form-field>
+            <table mat-table [dataSource]="ingredients" class="col-12">
+              <ng-container matColumnDef="ingredientName">
+                <th mat-header-cell *matHeaderCellDef> Name </th>
+                <td mat-cell *matCellDef="let element"> {{element.ingredientName}} </td>
+              </ng-container>
+              <ng-container matColumnDef="atHome">
+                <th mat-header-cell *matHeaderCellDef>At Home </th>
+                <td mat-cell *matCellDef="let element">
+                <div *ngIf="!element.atHome">
+                  <mat-icon><span class="material-icons text-danger">error</span></mat-icon>
+                </div>
+                <div *ngIf="element.atHome && element.warningLow > element.quantity">
+                  <mat-icon><span class="material-icons text-warning">warning</span></mat-icon>
+                </div>
+                <div *ngIf="element.atHome && element.quantity > element.warningLow">
+                  <mat-icon><span class="material-icons text-success">check</span></mat-icon>
+                </div>
+              </td>
+              </ng-container>
+              <ng-container matColumnDef="quantity">
+                <th mat-header-cell *matHeaderCellDef>Amount</th>
+                <td mat-cell *matCellDef="let element">
+                  {{element.quantity}} {{element.unit}}
+                </td>
+              </ng-container>
+              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+              <!-- Row shown when there is no matching data. -->
+              <tr class="mat-row" *matNoDataRow>
+                <td class="mat-cell" colspan="4">No results.</td>
+              </tr>
+            </table>
+        </mat-card>
+      </div>
     </mat-tab>
 
   </mat-tab-group>
