Working through profiles

--- a/Gui/src/app/add-content/add-content.component.html
+++ b/Gui/src/app/add-content/add-content.component.html
@@ -14,7 +14,7 @@
       <span mat-line>Add a new recipe to your book</span>
     </a>
   
-    <a mat-list-item (click)="openLink($event)">
+    <a mat-list-item (click)="openLink($event)" routerLink="/add/ingredient">
       <span mat-line>New Ingredient</span>
       <span mat-line>Add new ingredients to your pantry</span>
     </a>
