--- a/Gui/src/app/navbar-footer/navbar-footer.component.html
+++ b/Gui/src/app/navbar-footer/navbar-footer.component.html
@@ -12,7 +12,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" routerLinkActive="active" routerLink="/profile">
+            <a class="nav-link" routerLinkActive="active" routerLink="/profile/{{userName}}">
                 <mat-icon class="icon">person</mat-icon>
                 <!-- <mat-icon class="icon" matBadge="8" matBadgePosition="before" matBadgeColor="primary">person</mat-icon> -->
             </a>
