--- a/Gui/src/app/profile/profile.component.html
+++ b/Gui/src/app/profile/profile.component.html
@@ -2,15 +2,14 @@
 
     <div class="row">
         <div class="text-center col-8 mx-auto">
-            <img src="{{user.userImageUrl}}" class="rounded-circle img-fluid border border-dark" alt="{{user.displayName}}'s User Image">
-
-      
-                <input *ngIf="currentUserIsProfileUser()" #imageInput
-                       type="file"
-                       accept="image/*"
-                       (change)="processFile(imageInput)">
-          
-
+                <label>
+                    <img src="{{user.userImageUrl}}" class="rounded-circle img-fluid border border-dark" alt="{{user.displayName}}'s User Image">
+                    <input *ngIf="currentUserIsProfileUser()" #imageInput
+                        type="file"
+                        accept="image/*"
+                        (change)="processFile(imageInput)"
+                        [hidden]="true">
+                </label>      
         </div>  
     </div>
     
