--- a/Gui/src/app/profile/profile.component.html
+++ b/Gui/src/app/profile/profile.component.html
@@ -3,7 +3,12 @@
     <div class="row">
         <div class="text-center col-8 mx-auto">
                 <label>
-                    <img src="{{user.userImageUrl}}" class="rounded-circle img-fluid border border-dark" alt="{{user.displayName}}'s User Image">
+                    <div *ngIf="user.userImageUrl">
+                        <img src="{{user.userImageUrl}}" class="rounded-circle img-fluid border border-dark" alt="{{user.displayName}}'s User Image">
+                    </div>
+                    <div *ngIf="!user.userImageUrl">
+                        <img src="../../assets/no_image.jpg" class="rounded-circle img-fluid border border-dark" alt="{{user.displayName}}'s User Image">
+                    </div>
                     <input *ngIf="currentUserIsProfileUser()" #imageInput
                         type="file"
                         accept="image/*"
