--- a/Gui/src/styles.scss
+++ b/Gui/src/styles.scss
@@ -4,14 +4,26 @@ html, body {
     height: 100%; 
 }
 
+/*
 body { 
     margin: 0; 
     font-family: Roboto, "Helvetica Neue", sans-serif; 
-    /*
-    background-color: rgb(95, 95, 95);
+    background-color: rgb(192, 196, 209);
+    background-size: 25%;
+}
+
+body:before {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.75;
     background-image: url("../src/assets/background.png");
     background-repeat: repeat-y repeat-x;
     background-size: 25%;
-    */
+    z-index: -1;
 }
-
+*/
