--- a/Gui/src/app/plan/plan.component.html
+++ b/Gui/src/app/plan/plan.component.html
@@ -59,30 +59,34 @@
               <input matInput (keyup)="applyFilter($event)" placeholder="Ex. pepper" #input>
             </mat-form-field>
             <table mat-table [dataSource]="ingredients" class="col-12">
+
+
               <ng-container matColumnDef="ingredientName">
                 <th mat-header-cell *matHeaderCellDef> Name </th>
                 <td mat-cell *matCellDef="let element"> {{element.ingredientName}} </td>
               </ng-container>
-              <ng-container matColumnDef="atHome">
-                <th mat-header-cell *matHeaderCellDef>At Home </th>
-                <td mat-cell *matCellDef="let element">
-                <div *ngIf="!element.atHome">
-                  <mat-icon><span class="material-icons text-danger">error</span></mat-icon>
-                </div>
-                <div *ngIf="element.atHome && element.warningLow > element.quantity">
-                  <mat-icon><span class="material-icons text-warning">warning</span></mat-icon>
-                </div>
-                <div *ngIf="element.atHome && element.quantity > element.warningLow">
-                  <mat-icon><span class="material-icons text-success">check</span></mat-icon>
-                </div>
-              </td>
-              </ng-container>
+
               <ng-container matColumnDef="quantity">
-                <th mat-header-cell *matHeaderCellDef>Amount</th>
+                <th mat-header-cell *matHeaderCellDef>In Pantry</th>
                 <td mat-cell *matCellDef="let element">
-                  {{element.quantity}} {{element.unit}}
+                  <div *ngIf="element.warningLow != null && element.quantity <= 0">
+                    <mat-icon><span class="material-icons text-danger">error</span></mat-icon>
+                    {{element.quantity}} ({{element.unit}})
+                  </div>
+                  <div *ngIf="element.warningLow != null && element.warningLow >= element.quantity && element.quantity > 0">
+                    <mat-icon><span class="material-icons text-warning">warning</span></mat-icon>
+                    {{element.quantity}} ({{element.unit}})
+                  </div>
+                  <div *ngIf="element.warningLow != null && element.quantity > element.warningLow && element.quantity > 0">
+                    <mat-icon><span class="material-icons text-success">check</span></mat-icon>
+                    {{element.quantity}} ({{element.unit}})
+                  </div>
+                  <div *ngIf="element.warningLow == null || element.quantity == null">
+                    (Unknown)
+                  </div>
                 </td>
               </ng-container>
+
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
               <!-- Row shown when there is no matching data. -->
