--- a/Gui/src/app/edit-content/ingredient/edit-ingredient/edit-ingredient.component.html
+++ b/Gui/src/app/edit-content/ingredient/edit-ingredient/edit-ingredient.component.html
@@ -23,7 +23,7 @@
                 </div>
 
              <br>
-             <p class="h4">Add Ingredient</p>
+             <p class="h4">Edit Ingredient</p>
 
             <div class="row">
                 <mat-form-field class="col-12">
@@ -35,11 +35,6 @@
             <div class="row">
 
                 <mat-form-field class="col-4">
-                    <mat-label>Quantity</mat-label>
-                    <input formControlName="quantity" placeholder="25" matInput>
-                </mat-form-field>
-
-                <mat-form-field class="col-4">
                     <mat-label>Unit</mat-label>
                     <mat-select formControlName="unit" required>
                       <mat-option *ngFor="let unit of units" [value]="unit">
@@ -47,6 +42,11 @@
                       </mat-option>
                     </mat-select>
                   </mat-form-field>
+
+                <mat-form-field class="col-4">
+                    <mat-label>Quantity</mat-label>
+                    <input formControlName="quantity" placeholder="25" matInput>
+                </mat-form-field>
 
                 <mat-form-field class="col-4">
                     <mat-label>Warning Qty</mat-label>
@@ -61,7 +61,8 @@
                 </mat-form-field>
             </div>
 
-            <button class="float-right" mat-raised-button color="primary">Add Ingredient</button>
+            <button class="float-left" mat-raised-button color="warn" (click)="deleteIngredient()">Delete Ingredient</button>
+            <button class="float-right" mat-raised-button color="primary" (click)="onSubmit()">Update Ingredient</button>
             <br><br>
 
         </form>
