--- a/Gui/src/app/plan/plan.component.html
+++ b/Gui/src/app/plan/plan.component.html
@@ -1,12 +1,13 @@
 <div class="tabs w-90">
-  <mat-tab-group mat-stretch-tabs>
+  <mat-tab-group mat-stretch-tabs #tabGroup>
 
     <!-- Meals -->
     <mat-tab>
       <ng-template mat-tab-label>
         Meals
       </ng-template>
-
+      Information about your meals.
+    <!--
       <div class="container">
         <mat-card *ngFor="let meal of meals" style="margin-top: 5px; margin-bottom: 5px;">
           <div class="container">
@@ -29,6 +30,7 @@
           </div>
         </mat-card>
       </div>
+    -->
     </mat-tab>
 
     <!-- Foods -->
@@ -69,29 +71,41 @@
               <ng-container matColumnDef="quantity">
                 <th mat-header-cell *matHeaderCellDef>In Pantry</th>
                 <td mat-cell *matCellDef="let element">
-                  <div *ngIf="element.warningLow != null && element.quantity <= 0">
-                    <mat-icon><span class="material-icons text-danger">error</span></mat-icon>
-                    {{element.quantity}} ({{element.unit}})
-                  </div>
-                  <div *ngIf="element.warningLow != null && element.warningLow >= element.quantity && element.quantity > 0">
-                    <mat-icon><span class="material-icons text-warning">warning</span></mat-icon>
-                    {{element.quantity}} ({{element.unit}})
-                  </div>
-                  <div *ngIf="element.warningLow != null && element.quantity > element.warningLow && element.quantity > 0">
-                    <mat-icon><span class="material-icons text-success">check</span></mat-icon>
-                    {{element.quantity}} ({{element.unit}})
-                  </div>
-                  <div *ngIf="element.warningLow == null || element.quantity == null">
-                    (Unknown)
-                  </div>
+
+                  <div class="nowrap">
+                    <mat-icon *ngIf="element.warningLow != null && element.quantity > element.warningLow && element.quantity > 0">
+                      <span class="material-icons text-success">check</span>
+                    </mat-icon>
+
+                    <mat-icon *ngIf="element.warningLow != null && element.warningLow >= element.quantity && element.quantity > 0">
+                      <span class="material-icons text-warning">warning</span>
+                    </mat-icon>
+
+                    <mat-icon *ngIf="element.warningLow != null && element.quantity <= 0">
+                      <span class="material-icons text-danger">error</span>
+                    </mat-icon>
+
+                    <span *ngIf="element.quantity != null">
+                      {{element.quantity}}
+                    </span>
+
+                    <span *ngIf="element.quantity == null">
+                      Unknown
+                    </span>
+
+                    <span *ngIf="element.unit != 'None'">
+                      ({{element.unit}})
+                    </span>
+                </div>
+
                 </td>
               </ng-container>
 
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="editRow(row)" style="cursor: pointer;"></tr>
               <!-- Row shown when there is no matching data. -->
               <tr class="mat-row" *matNoDataRow>
-                <td class="mat-cell" colspan="4">No results.</td>
+                <td class="mat-cell" colspan="4">No ingredients to display.</td>
               </tr>
             </table>
         </mat-card>
